@@ -1,5 +1,11 @@
 2008-12-14  Carlos Garcia Campos  <carlosgc@gnome.org>
 
+	* src/cpufreq-applet.c: (cpufreq_applet_init),
+	(cpufreq_applet_setup): Show the applet when the setup is done
+	rather than in the init method.
+	
+2008-12-14  Carlos Garcia Campos  <carlosgc@gnome.org>
+
 	* src/cpufreq-monitor-sysfs.c:
 	* src/cpufreq-selector/cpufreq-selector-procfs.c:
 	* src/cpufreq-selector/cpufreq-selector-sysfs.c:
